--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/d3": "^7.0.0",
+    "d3": "^7.0.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
