--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/d3": "^7.0.0",
+    "@types/react-redux": "^7.1.18",
     "d3": "^7.0.4",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
